  - fixed reducable values not having proper fractional results (previously returned :no_fractional_power)
  - Added absolute_value/1
  - Added near_equal?/3
  - Added floor/1 and ceiling/1
  - Added increment/2 and decrement/2
  - increment/2 and decrement/2 support `:both` option
  - Added within?/3 and within?/2
  - added type guard: is_coercible?
  

## v0.11.2

### Build/Development changes

 - Module requiring HTTPoison and Jason excluded from packaging
 - HTTPoison and Jason moved to `dev` and `test` only requirements
 - Credo is now being used for style/consistency checks (with specific configuration to make credo run in a reasonable time frame)
 - new documentation as main page for hexdocs (library.md)
 
### Libraries

 - Refactored Fractions.lcm/1 and Fractions.lcm/2 to Math.lcm/1 and Math.lcm/2
 - Refactored nth_root/3, integer_nth_root?/3, and floats_equal?/3 from Fractions to Math
 - Updated all cached Math functions to use CacheAgent.cache_as macro

### Sequences

 - Moved A000045/Fibonacci from Sequence.OEIS to Sequence.OEIS.Core
  

## v0.11.1

### Enhancements

 - Chunky.Math
  - `analyze_number/2` - Run all predicates against `n` to generate labels for `n`
  - `is_odd?/1` - New predicate
  - `is_even?/1` - New predicate
  - `is_zero?/1` - New predicate
  - `is_positive?/1` - New predicate
  - `is_negative?/1` - New predicate
  - all predicates of form `is_*?/1` now work for all integers in range `(-∞..+∞)


## v0.11.0

```
OEIS Coverage
        210 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 3 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 88 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 98 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 89 / 177 (50.28%)
        OEIS Core::Easy Sequences - 75 / 146 (51.37%)
        OEIS Core::Hard Sequences - 12 / 12 (100.0%)